--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="section" id="catalog">
         <h2>Каталог</h2>
         <div class="product">
-          <a href="https://tanyanm.github.io/beads-site/">  <img src="https://learn.logikaschool.com/uploads/student/1414186/67543d452473d.jpg" alt="Браслети" class="product-image"></a>
+          <a href="https://illya1225.github.io/brasletu/">  <img src="https://learn.logikaschool.com/uploads/student/1414186/67543d452473d.jpg" alt="Браслети" class="product-image"></a>
             <p class="product-name">Браслети</p>
 
         </div>
